// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests alert component displays an error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`tests alert component displays success message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
  >
    Success!!
  </div>
</DocumentFragment>
`;

exports[`tests alert component doesnt render success message if message props is empty 1`] = `<DocumentFragment />`;
